--- a/package.json
+++ b/package.json
@@ -2,6 +2,27 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^5.2.1",
-    "joi": "^18.0.2"
-  }
+    "joi": "^18.0.2",
+    "nodemon": "^3.1.11"
+  },
+  "name": "signin",
+  "version": "1.0.0",
+  "description": "",
+  "main": "app.js",
+  "scripts": {
+    "start": "node app.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/ShinYeoJin/cicd_server_test2.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "type": "commonjs",
+  "bugs": {
+    "url": "https://github.com/ShinYeoJin/cicd_server_test2/issues"
+  },
+  "homepage": "https://github.com/ShinYeoJin/cicd_server_test2#readme"
 }
