--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
   "dependencies": {
+    "@prisma/client": "^6.19.0",
     "cors": "^2.8.5",
     "express": "^5.2.1",
     "joi": "^18.0.2",
-    "nodemon": "^3.1.11"
+    "nodemon": "^3.1.11",
+    "pg": "^8.16.3",
+    "prisma": "^6.19.0"
   },
   "name": "signin",
   "version": "1.0.0",
@@ -11,6 +14,7 @@
   "main": "app.js",
   "scripts": {
     "start": "node app.js",
+    "build": "prisma generate && next build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
