--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "start": "node app.js",
-    "build": "prisma generate && next build",
+    "start": "prisma generate && node app.js",
+    "build": "next build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
